Ensure text remains visible during webfont load

--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -9,6 +9,7 @@
   @font-face {
     font-family: "Lato";
     src: local("Lato"), url("./../fonts/Lato/Lato-Black.ttf") format("truetype");
+    font-display: swap;
   }
 
   *,
